Changed PolarLayout to PolarLayout r t
Tests have been added to demonstrate the polar plots.

This change adds functionality but also removes some configurability (e.g. control over the axes). More work is needed to make it a better match for the Axis/Layout code.

--- a/chart-tests/Chart-tests.cabal
+++ b/chart-tests/Chart-tests.cabal
@@ -28,6 +28,7 @@ Extra-Source-Files:
      tests/Test15.hs,
      tests/Test17.hs,
      tests/TestParametric.hs,     
+     tests/TestPolar.hs,     
      tests/Prices.hs,
      tests/ExampleStocks.hs,
      tests/gtk/Prices.hs,
