--- a/chart/Chart.cabal
+++ b/chart/Chart.cabal
@@ -33,35 +33,36 @@ library
   Ghc-options: -Wall -fno-warn-orphans
 
   Exposed-modules:
-        Graphics.Rendering.Chart,
-        Graphics.Rendering.Chart.Drawing,
-        Graphics.Rendering.Chart.Geometry,
-        Graphics.Rendering.Chart.Utils,
-        Graphics.Rendering.Chart.Renderable,
-        Graphics.Rendering.Chart.Axis,
-        Graphics.Rendering.Chart.Axis.Floating,
-        Graphics.Rendering.Chart.Axis.Indexed,
-        Graphics.Rendering.Chart.Axis.Int,
-        Graphics.Rendering.Chart.Axis.Internal,
-        Graphics.Rendering.Chart.Axis.LocalTime,
-        Graphics.Rendering.Chart.Axis.Types,
-        Graphics.Rendering.Chart.Axis.Unit,
-        Graphics.Rendering.Chart.Layout,
-        Graphics.Rendering.Chart.Legend,
-        Graphics.Rendering.Chart.Grid,
-        Graphics.Rendering.Chart.Plot,
-        Graphics.Rendering.Chart.Plot.Types,
-        Graphics.Rendering.Chart.Plot.Annotation,
-        Graphics.Rendering.Chart.Plot.AreaSpots,
-        Graphics.Rendering.Chart.Plot.Bars,
-        Graphics.Rendering.Chart.Plot.Candle,
-        Graphics.Rendering.Chart.Plot.ErrBars,
-        Graphics.Rendering.Chart.Plot.FillBetween,
-        Graphics.Rendering.Chart.Plot.Hidden,
-        Graphics.Rendering.Chart.Plot.Lines,
-        Graphics.Rendering.Chart.Plot.Pie,
+        Graphics.Rendering.Chart
+        Graphics.Rendering.Chart.Drawing
+        Graphics.Rendering.Chart.Geometry
+        Graphics.Rendering.Chart.Utils
+        Graphics.Rendering.Chart.Renderable
+        Graphics.Rendering.Chart.Axis
+        Graphics.Rendering.Chart.Axis.Floating
+        Graphics.Rendering.Chart.Axis.Indexed
+        Graphics.Rendering.Chart.Axis.Int
+        Graphics.Rendering.Chart.Axis.Internal
+        Graphics.Rendering.Chart.Axis.LocalTime
+        Graphics.Rendering.Chart.Axis.Types
+        Graphics.Rendering.Chart.Axis.Unit
+        Graphics.Rendering.Chart.Layout
+        Graphics.Rendering.Chart.Legend
+        Graphics.Rendering.Chart.Grid
+        Graphics.Rendering.Chart.Plot
+        Graphics.Rendering.Chart.Plot.Types
+        Graphics.Rendering.Chart.Plot.Annotation
+        Graphics.Rendering.Chart.Plot.AreaSpots
+        Graphics.Rendering.Chart.Plot.Bars
+        Graphics.Rendering.Chart.Plot.Candle
+        Graphics.Rendering.Chart.Plot.ErrBars
+        Graphics.Rendering.Chart.Plot.FillBetween
+        Graphics.Rendering.Chart.Plot.Hidden
+        Graphics.Rendering.Chart.Plot.Lines
+        Graphics.Rendering.Chart.Plot.Pie
         Graphics.Rendering.Chart.Plot.Points
         Graphics.Rendering.Chart.Plot.Polar
+        Graphics.Rendering.Chart.PolarLayout
         Graphics.Rendering.Chart.SparkLine
         Graphics.Rendering.Chart.Backend
         Graphics.Rendering.Chart.Backend.Impl
