--- a/chart-docimages/Chart-docimages.cabal
+++ b/chart-docimages/Chart-docimages.cabal
@@ -28,8 +28,10 @@ Executable PolarExample
   Build-Depends:
     base
     , Chart >= 1.2.2 && < 1.3
-    , Chart-cairo
+    -- , Chart-cairo
+    , Chart-diagrams
     , colour
+    , containers
     , data-default-class
     , lens
-    , random >= 1.0 && < 1.1
+    , random >= 1.0 && < 1.2
